--- a/src/core/Wyam.App/Wyam.App.csproj
+++ b/src/core/Wyam.App/Wyam.App.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
     <PackageReference Include="Spectre.Cli" Version="0.20.0" />
   </ItemGroup>
 
