--- a/src/core/Wyam.App/Wyam.App.csproj
+++ b/src/core/Wyam.App/Wyam.App.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
-    <PackageReference Include="Scrutor" Version="3.0.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="2.1.0" />
     <PackageReference Include="Spectre.Cli" Version="0.20.0" />
   </ItemGroup>
 
