--- a/src/extensions/Wyam.GitHub/Wyam.GitHub.csproj
+++ b/src/extensions/Wyam.GitHub/Wyam.GitHub.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <Description>Wyam is a simple to use, highly modular, and extremely configurable static content generator. This library contains modules for interacting with GitHub.</Description>
     <PackageTags>Wyam Static StaticContent StaticSite Blog BlogEngine Git GitHub</PackageTags>
     <RepositoryUrl>https://github.com/Wyamio/Wyam.git</RepositoryUrl>
