--- a/src/extensions/Wyam.Less/Wyam.Less.csproj
+++ b/src/extensions/Wyam.Less/Wyam.Less.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <Description>Wyam is a simple to use, highly modular, and extremely configurable static content generator. This library provides support for parsing Less CSS content.</Description>
     <PackageTags>Wyam Static StaticContent StaticSite Blog BlogEngine CSS Less LessCSS</PackageTags>
     <RepositoryUrl>https://github.com/Wyamio/Wyam.git</RepositoryUrl>
