--- a/src/extensions/Wyam.Tables/Wyam.Tables.csproj
+++ b/src/extensions/Wyam.Tables/Wyam.Tables.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <Description>Wyam is a simple to use, highly modular, and extremely configurable static content generator. This library provides support for importing and exporting CSV and Excel files.</Description>
     <PackageTags>Wyam Static StaticContent StaticSite Blog BlogEngine CSV Excel</PackageTags>
     <RepositoryUrl>https://github.com/Wyamio/Wyam.git</RepositoryUrl>
