--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -1,7 +1,7 @@
 <Project>
   <Import Project="../Directory.Build.props" />
   <PropertyGroup>
-    <CodeAnalysisRuleSet>..\..\..\wyam.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>..\..\..\tests.ruleset</CodeAnalysisRuleSet>
     <!-- Treats projects as executables so things like unmanaged dependencies are copied to output -->
     <HasRuntimeOutput>true</HasRuntimeOutput>
   </PropertyGroup>
