--- a/src/core/Wyam.Common/Wyam.Common.csproj
+++ b/src/core/Wyam.Common/Wyam.Common.csproj
@@ -6,4 +6,7 @@
     <RepositoryUrl>https://github.com/Wyamio/Wyam.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.1" />
+  </ItemGroup>
 </Project>
