--- a/src/core/Wyam.Testing/Wyam.Testing.csproj
+++ b/src/core/Wyam.Testing/Wyam.Testing.csproj
@@ -7,13 +7,10 @@
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Wyam.Common\Wyam.Common.csproj">
-      <PrivateAssets>all</PrivateAssets>
-    </ProjectReference>
+    <ProjectReference Include="..\Wyam.Common\Wyam.Common.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="ConcurrentHashSet" Version="1.0.2" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.1" />
     <PackageReference Include="NUnit" Version="3.11.0" />
     <PackageReference Include="System.Collections.Immutable" Version="1.3.1" />
   </ItemGroup>
