--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,7 @@ jobs:
     env:
       SYSTEM_ACCESSTOKEN: $(System.AccessToken)
       STATIQ_GITHUB_TOKEN: $(STATIQ_GITHUB_TOKEN)
+      MYGET_API_KEY: $(MYGET_API_KEY)
 - job: Linux
   pool:
     vmImage: 'ubuntu 16.04'
