--- a/src/extensions/Statiq.CodeAnalysis/Statiq.CodeAnalysis.csproj
+++ b/src/extensions/Statiq.CodeAnalysis/Statiq.CodeAnalysis.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Buildalyzer.Workspaces" Version="2.2.0" />
     <PackageReference Include="ConcurrentHashSet" Version="1.0.2" />
+    <PackageReference Include="System.Linq.Async" Version="4.0.0-preview.6.build.801" />
     <PackageReference Include="System.Reflection.TypeExtensions" Version="4.5.1" />
   </ItemGroup>
   <ItemGroup>
