--- a/src/extensions/Statiq.Html/Statiq.Html.csproj
+++ b/src/extensions/Statiq.Html/Statiq.Html.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.9.10" />
     <PackageReference Include="Polly" Version="7.1.0" />
+    <PackageReference Include="System.Linq.Async" Version="4.0.0-preview.6.build.801" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
   <ItemGroup>
