--- a/src/extensions/Statiq.Minification/Statiq.Minification.csproj
+++ b/src/extensions/Statiq.Minification/Statiq.Minification.csproj
@@ -7,6 +7,7 @@
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="System.Linq.Async" Version="4.0.0-preview.6.build.801" />
     <PackageReference Include="WebMarkupMin.Core" Version="2.3.0" />
   </ItemGroup>
   <ItemGroup>
