--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,11 @@ jobs:
   pool:
     vmImage: 'vs2017-win2016'
   steps:
+  - task: UseDotNet@2
+    displayName: 'Use .NET Core SDK 3.x'
+    inputs:
+      version: 3.x
+      includePreviewVersions: true
   - script: build -target BuildServer
     env:
       SYSTEM_ACCESSTOKEN: $(System.AccessToken)
@@ -12,6 +17,11 @@ jobs:
   pool:
     vmImage: 'ubuntu 16.04'
   steps:
+  - task: UseDotNet@2
+    displayName: 'Use .NET Core SDK 3.x'
+    inputs:
+      version: 3.x
+      includePreviewVersions: true
   - script: pwsh ./build.ps1 -target BuildServer
     env:
       SYSTEM_ACCESSTOKEN: $(System.AccessToken)
@@ -19,6 +29,11 @@ jobs:
   pool:
     vmImage: 'macOS-10.13'
   steps:
+  - task: UseDotNet@2
+    displayName: 'Use .NET Core SDK 3.x'
+    inputs:
+      version: 3.x
+      includePreviewVersions: true
   - script: pwsh ./build.ps1 -target BuildServer
     env:
       SYSTEM_ACCESSTOKEN: $(System.AccessToken)
