--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,9 +4,11 @@ jobs:
     vmImage: 'vs2017-win2016'
   steps:
   - task: UseDotNet@2
-    displayName: 'Use .NET Core SDK 3.x'
     inputs:
-      version: 3.x
+      version: '2.x'
+  - task: UseDotNet@2
+    inputs:
+      version: '3.x'
       includePreviewVersions: true
   - script: build -target BuildServer
     env:
@@ -18,9 +20,11 @@ jobs:
     vmImage: 'ubuntu 16.04'
   steps:
   - task: UseDotNet@2
-    displayName: 'Use .NET Core SDK 3.x'
     inputs:
-      version: 3.x
+      version: '2.x'
+  - task: UseDotNet@2
+    inputs:
+      version: '3.x'
       includePreviewVersions: true
   - script: pwsh ./build.ps1 -target BuildServer
     env:
@@ -30,9 +34,11 @@ jobs:
     vmImage: 'macOS-10.13'
   steps:
   - task: UseDotNet@2
-    displayName: 'Use .NET Core SDK 3.x'
     inputs:
-      version: 3.x
+      version: '2.x'
+  - task: UseDotNet@2
+    inputs:
+      version: '3.x'
       includePreviewVersions: true
   - script: pwsh ./build.ps1 -target BuildServer
     env:
