--- a/src/core/Statiq.Core/Statiq.Core.csproj
+++ b/src/core/Statiq.Core/Statiq.Core.csproj
@@ -11,11 +11,12 @@
     <PackageReference Include="JavaScriptEngineSwitcher.Core" Version="3.0.0" />
     <PackageReference Include="JavaScriptEngineSwitcher.Jint" Version="3.0.0" />
     <PackageReference Include="JSPool" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.0.0-preview8.19405.4" />
     <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="1.2.2" />
     <PackageReference Include="Polly" Version="7.1.0" />
-    <PackageReference Include="System.Collections.Immutable" Version="1.3.1" />
+    <PackageReference Include="System.Collections.Immutable" Version="1.6.0-preview8.19405.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.4.3" />
-    <PackageReference Include="System.Linq.Async" Version="4.0.0-preview.6.build.801" />
+    <PackageReference Include="System.Linq.Async" Version="4.0.0-preview.8.build.9" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Statiq.Common\Statiq.Common.csproj" />
