--- a/src/extensions/Statiq.Azure/Statiq.Azure.csproj
+++ b/src/extensions/Statiq.Azure/Statiq.Azure.csproj
@@ -5,6 +5,10 @@
     <PackageTags>Statiq Static StaticContent StaticSite Blog BlogEngine Azure AppService</PackageTags>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Search" Version="10.1.0" />
+    <PackageReference Include="Polly" Version="7.1.1" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\core\Statiq.Common\Statiq.Common.csproj" />
   </ItemGroup>
 </Project>
