--- a/src/core/Statiq.Core/Statiq.Core.csproj
+++ b/src/core/Statiq.Core/Statiq.Core.csproj
@@ -5,7 +5,7 @@
     <PackageTags>Statiq Static StaticContent StaticSite Blog BlogEngine</PackageTags>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="ConcurrentHashSet" Version="1.0.2" />
+    <PackageReference Include="ConcurrentHashSet" Version="1.1.0" />
     <PackageReference Include="JavaScriptEngineSwitcher.Core" Version="3.0.0" />
     <PackageReference Include="JavaScriptEngineSwitcher.Jint" Version="3.0.0" />
     <PackageReference Include="JSPool" Version="2.0.1" />
@@ -14,7 +14,7 @@
     <PackageReference Include="Polly" Version="7.1.1" />
     <PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.4.3" />
-    <PackageReference Include="System.Linq.Async" Version="4.0.0-preview.8.build.9" />
+    <PackageReference Include="System.Linq.Async" Version="4.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Statiq.Common\Statiq.Common.csproj" />
