--- a/src/extensions/Statiq.Lunr/Statiq.Lunr.csproj
+++ b/src/extensions/Statiq.Lunr/Statiq.Lunr.csproj
@@ -5,8 +5,8 @@
     <PackageTags>Statiq Static StaticContent StaticSite Blog BlogEngine SearchIndex</PackageTags>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
-    <PackageReference Include="System.Linq.Async" Version="4.0.0-preview.8.build.9" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="System.Linq.Async" Version="4.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\core\Statiq.Common\Statiq.Common.csproj" />
