--- a/src/extensions/Statiq.Minification/Statiq.Minification.csproj
+++ b/src/extensions/Statiq.Minification/Statiq.Minification.csproj
@@ -5,7 +5,7 @@
     <PackageTags>Statiq Static StaticContent StaticSite Blog BlogEngine HTML CSS JS WebMarkupMin</PackageTags>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="System.Linq.Async" Version="4.0.0-preview.8.build.9" />
+    <PackageReference Include="System.Linq.Async" Version="4.0.0" />
     <PackageReference Include="WebMarkupMin.Core" Version="2.3.0" />
   </ItemGroup>
   <ItemGroup>
