--- a/src/extensions/Statiq.Xmp/Statiq.Xmp.csproj
+++ b/src/extensions/Statiq.Xmp/Statiq.Xmp.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MetadataExtractor" Version="2.0.0" />
-    <PackageReference Include="SharpZipLib" Version="1.0.0-alpha1" />
+    <PackageReference Include="SharpZipLib" Version="1.2.0" />
     <PackageReference Include="XmpCore" Version="6.1.10" />
   </ItemGroup>
   <ItemGroup>
