More control over command default features

--- a/src/core/Statiq.Hosting/Statiq.Hosting.csproj
+++ b/src/core/Statiq.Hosting/Statiq.Hosting.csproj
@@ -28,4 +28,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Statiq.Common\Statiq.Common.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Commands\" />
+  </ItemGroup>
 </Project>
