--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -3,4 +3,9 @@
   <PropertyGroup>
     <CodeAnalysisRuleSet>..\..\..\statiq.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>$(MSBuildProjectName).Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
 </Project>
