--- a/src/core/Statiq.Hosting/Statiq.Hosting.csproj
+++ b/src/core/Statiq.Hosting/Statiq.Hosting.csproj
@@ -29,6 +29,8 @@
     <ProjectReference Include="..\Statiq.Common\Statiq.Common.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Commands\" />
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
+    </AssemblyAttribute>
   </ItemGroup>
 </Project>
