--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,9 +1,9 @@
 <Project> 
   <PropertyGroup>
-    <InformationalVersion>1.0.0-alpha.23</InformationalVersion>
+    <InformationalVersion>1.0.0-alpha.24</InformationalVersion>
     <AssemblyVersion>1.0.0</AssemblyVersion>
     <FileVersion>1.0.0</FileVersion>
-    <Product>Statiq</Product>
+    <Product>Statiq Framework</Product>
     <Copyright>Copyright © Statiq/Dave Glick</Copyright>
     <Authors>Dave Glick, Other Awesome Contributors</Authors>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
