--- a/src/extensions/Statiq.Feeds/Statiq.Feeds.csproj
+++ b/src/extensions/Statiq.Feeds/Statiq.Feeds.csproj
@@ -4,6 +4,9 @@
     <PackageTags>Statiq Static StaticContent StaticSite RSS Atom Syndication</PackageTags>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="0.9.10" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\core\Statiq.Common\Statiq.Common.csproj" />
   </ItemGroup>  
 </Project>
