--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 [Bb]in/
-[Bb]uild/
 [Oo]bj/
 [Dd]ebug/
 [Rr]elease/
 [Pp]ackages/
 [Tt]ools/
 ![Tt]ools/packages.config
+[Aa]rtifacts/
 nuget.exe
 *.com
 *.class
