Adds some tweaks to the ReadApi module Refactors the ReadTelegram module

--- a/src/extensions/Statiq.Telegram/Statiq.Telegram.csproj
+++ b/src/extensions/Statiq.Telegram/Statiq.Telegram.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\core\Statiq.Common\Statiq.Common.csproj" />
+    <ProjectReference Include="..\..\core\Statiq.Core\Statiq.Core.csproj" />
   </ItemGroup>
 
 </Project>
