Refactors the ReadSpotify module

--- a/src/extensions/Statiq.Spotify/Statiq.Spotify.csproj
+++ b/src/extensions/Statiq.Spotify/Statiq.Spotify.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\core\Statiq.Common\Statiq.Common.csproj" />
+    <ProjectReference Include="..\..\core\Statiq.Core\Statiq.Core.csproj" />
   </ItemGroup>
 
 </Project>
