Ongoing work improving performance of streams and content

--- a/tests/core/Statiq.Common.Tests/Statiq.Common.Tests.csproj
+++ b/tests/core/Statiq.Common.Tests/Statiq.Common.Tests.csproj
@@ -9,5 +9,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Scripting\" />
+    <Folder Include="Util\ItemStreams\" />
   </ItemGroup>
 </Project>
