Working on a GenerateLunrIndex module rewrite (#192)

--- a/src/extensions/Statiq.Lunr/Statiq.Lunr.csproj
+++ b/src/extensions/Statiq.Lunr/Statiq.Lunr.csproj
@@ -4,6 +4,7 @@
     <PackageTags>Statiq Static StaticContent StaticSite Blog BlogEngine SearchIndex</PackageTags>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="LunrCore" Version="2.3.9" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="System.Linq.Async" Version="4.0.0" />
   </ItemGroup>
