Added the `cache` directory to the excluded list in `Statiq.App.props`

--- a/src/core/Statiq.App/Statiq.App.props
+++ b/src/core/Statiq.App/Statiq.App.props
@@ -1,7 +1,7 @@
 <Project>
   <PropertyGroup>
     <RunWorkingDirectory>$(MSBuildProjectDirectory)</RunWorkingDirectory>
-    <DefaultItemExcludes>$(DefaultItemExcludes);output\**</DefaultItemExcludes>
+    <DefaultItemExcludes>$(DefaultItemExcludes);output\**;cache\**</DefaultItemExcludes>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="input\**" />
