--- a/src/core/Statiq.App/Statiq.App.csproj
+++ b/src/core/Statiq.App/Statiq.App.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="Statiq.App.props" Pack="true" PackagePath="build\$(TargetFramework)\" />
-    <None Include="Statiq.App.props" Pack="true" PackagePath="buildTransitive\$(TargetFramework)\" />
+    <None Include="Statiq.App.targets" Pack="true" PackagePath="build\$(TargetFramework)\" />
+    <None Include="Statiq.App.targets" Pack="true" PackagePath="buildTransitive\$(TargetFramework)\" />
   </ItemGroup>
 
   <ItemGroup>
